--- a/BlogStyle.css
+++ b/BlogStyle.css
@@ -1,27 +1,35 @@
-		h1, h2, h3 { margin:0; padding:0; font-weight:normal; font-style:normal; }
-		a { color:#5D5D9E; } 
-		a:visited { color:#5D5D9E; } 
-		a:active { color:#5C615E; } 
-		a:hover { color:#B2B3B4; } 
-		#menu_3bd38d17 a { text-decoration: none; }
-		#menu_3bd38d17_pane { background-color: #2C2825; border: 1px solid #646464; padding-top: 10px; padding-bottom: 10px; box-shadow: 2px 2px 6px 0px rgba(8, 8, 8, 0.784314); }
-		#menu_3bd38d17_hr { background-color: #646464; height: 1px; border: none; }
-		#menu_3bd38d17_entry { padding-left: 10px; padding-right: 10px; padding-top: 3px; padding-bottom: 3px; }
-		#menu_3bd38d17_entry:hover { background-color: #323232; color: #FFFFFF !important; }
-		#menu_3bd38d17_entry:hover span { color:#FFFFFF !important; }
-		.menu_3bd38d17_mainMenuEntry { text-align: center; }
-		.menu_3bd38d17_mainMenuEntry:hover {	background-color:#FFFFFF; }
-		.menu_3bd38d17_mainMenuEntry:hover span {	color:#000000 !important; }
-		#menu_3bd38d17 .mobileEntry { display: none; } 
-		#menu_3bd38d17 .normalEntry { display: block; } 
-		@media only screen and (max-width:450px) { 
-			#menu_3bd38d17 .mobileEntry { display: block; } 
-			#menu_3bd38d17 .normalEntry { display: none; } 
-		}
-		#button_6d2dd433 { vertical-align: bottom; border-radius: 2px; position:relative; display: inline-block; width:150px; height:40px; background-color:#E5B340;  }
-		#button_6d2dd433:hover { background-color:#FEE556;  }
-		#button_6d2dd433:hover span { color:#444444 !important; }
-		@media only screen and (max-width: 450px)
-		{
-				#menu_3bd38d17 { width:100px !important;  }
-		}
+h1, h2, h3 { margin:0; padding:0; font-weight:normal; font-style:normal; }
+a { color:#5D5D9E; } 
+a:visited { color:#5D5D9E; } 
+a:active { color:#5C615E; } 
+a:hover { color:#B2B3B4; } 
+#menu_3dae042d a { text-decoration: none; }
+#menu_3dae042d_pane { background-color: #2C2825; border: 1px solid #646464; padding-top: 10px; padding-bottom: 10px; box-shadow: 2px 2px 6px 0px rgba(8, 8, 8, 0.784314); }
+#menu_3dae042d_hr { background-color: #646464; height: 1px; border: none; }
+#menu_3dae042d_entry { padding-left: 10px; padding-right: 10px; padding-top: 3px; padding-bottom: 3px; }
+#menu_3dae042d_entry:hover { background-color: #323232; color: #FFFFFF !important; }
+#menu_3dae042d_entry:hover span { color:#FFFFFF !important; }
+.menu_3dae042d_mainMenuEntry { text-align: center; }
+.menu_3dae042d_mainMenuEntry:hover {	background-color:#FFFFFF; }
+.menu_3dae042d_mainMenuEntry:hover span {	color:#000000 !important; }
+#menu_3dae042d .mobileEntry { display: none; } 
+#menu_3dae042d .normalEntry { display: block; } 
+@media only screen and (max-width:450px) { 
+	#menu_3dae042d .mobileEntry { display: block; } 
+	#menu_3dae042d .normalEntry { display: none; } 
+}
+#button_1fa0001a { vertical-align: bottom; border-radius: 2px; position:relative; display: inline-block; width:150px; height:40px; background-color:#E5B340;  }
+#button_1fa0001a:hover { background-color:#FEE556;  }
+#button_1fa0001a:hover span { color:#444444 !important; }
+#button_7b672672 { vertical-align: bottom; border-radius: 2px; position:relative; display: inline-block; width:150px; height:40px; background-color:#E5B340;  }
+#button_7b672672:hover { background-color:#FEE556;  }
+#button_7b672672:hover span { color:#444444 !important; }
+@media only screen and (max-width: 600px)
+{
+		#container_1364a63e { width:100% !important;  }
+		#container_478afb3 { width:100% !important;  }
+}
+@media only screen and (max-width: 450px)
+{
+		#menu_3dae042d { width:100px !important;  }
+}
